 2013-08-14 15:41  asfernandes 
   M builds/posix/make.shared.targets
Fixed the problem with make -j when only parse.y is changed.

 2013-08-14 09:27  dimitr 
   M src/jrd/validation.cpp
Attempted to fix unexpectedly big (> 2^32) page numbers in the validation output + some related adjustments.

 2013-08-14 02:20  asfernandes 
   M src/dsql/Parser.h
   M src/dsql/parse.y
Fixed CORE-4177 (last part) - Problem with some boolean expressions not being allowed.

 2013-08-14 02:20  asfernandes 
   M src/jrd/recsrc/BufferedStream.cpp
Fix assertion.

 2013-08-12 02:20  asfernandes 
   M src/dsql/parse.y
Fixed CORE-4177 (only the simple test case reported in fb-devel) - Problem with some boolean expressions not being allowed.

 2013-08-09 15:51  dimitr 
   M src/jrd/DatabaseSnapshot.cpp
Fixed CORE-4176: Monitoring tables return incomplete information in SC/CS configurations.

 2013-08-09 05:04  dimitr 
   M src/jrd/dfw.epp
Fixed CORE-4173: Setting generator value twice in single transaction will set it to zero.

 2013-08-08 08:41  hvlad 
   M src/jrd/cch.cpp
   M src/jrd/cch.h
Restore scan-resistance feature of the page cache. 
Refactor common code a bit.

 2013-08-07 09:58  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallEnvironmentChecks.inc
Improve installed product detection to support changes in Fb3.

 2013-08-06 18:49  dimitr 
   M src/jrd/ext.cpp
Fixed CORE-4168: Backup containing procedures or triggers that select from external tables cannot be restored with ExternalFileAccess=None.

 2013-08-06 09:37  dimitr 
   M src/dsql/AggNodes.cpp
   M src/jrd/Database.cpp
   M src/jrd/Database.h
   M src/jrd/idx.cpp
   M src/jrd/recsrc/SortedStream.cpp
   M src/jrd/sort.cpp
   M src/jrd/sort.h
Front ported CORE-3989: Bad performance / slow response when many concurrent sorts are executed.

 2013-08-06 08:49  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallEnvironmentChecks.inc